prql/tests/integration/snapshots/integration__examples__run_examples@cte-1.prql.snap
---
source: prql/tests/integration/examples.rs
expression: sql
input_file: prql/tests/integration/examples/cte-1.prql
---
WITH newest_employees AS (
  SELECT
    employees.*
  FROM
    employees
  ORDER BY
    employees.tenure
  LIMIT
    50
), average_salaries AS (
  SELECT
    country,
    AVG(salary) AS average_country_salary
  FROM
    salaries
  GROUP BY
    country
)
SELECT
  name,
  salary,
  average_country_salary
FROM
  newest_employees
  JOIN average_salaries USING(country)
