prql/tests/integration/snapshots/integration__examples__run_examples@sql-parameters.prql.snap
---
source: prql/tests/integration/examples.rs
expression: sql
input_file: prql/tests/integration/examples/sql-parameters.prql
---
SELECT
  mytable.*
FROM
  mytable
WHERE
  id = $1
